# informatica-unlp

./: LICENSE  README.md
Cuarto Año/Sistemas Paralelos/Entregas/Entrega 1/: CMakeLists.txt
Cuarto Año/Sistemas Paralelos/Entregas/Entrega 1/Ejercicio 1/: matrix.c
Cuarto Año/Sistemas Paralelos/Entregas/Entrega 1/Ejercicio 1/openmp/: main.c
Cuarto Año/Sistemas Paralelos/Entregas/Entrega 1/Ejercicio 1/pthread/: main.c
Cuarto Año/Sistemas Paralelos/Entregas/Entrega 1/Ejercicio 1/secuencial/: main.c  matrix.c  matrix.h
Cuarto Año/Sistemas Paralelos/Entregas/Entrega 1/Ejercicio 2/: MEDICIONES.md  openmp.c  pthreads.c  secuencial.c
Cuarto Año/Sistemas Paralelos/Entregas/Entrega 1/ejercicio1/: CMakeLists.txt
Cuarto Año/Sistemas Paralelos/Entregas/Entrega 1/ejercicio1/pthread/: main.c
Cuarto Año/Sistemas Paralelos/Entregas/Entrega 1/ejercicio2/: CMakeLists.txt
Cuarto Año/TCyVP/Practicas/: PRACTICA1.md
Tercer Año/Primer Semestre/CyPLP/: PRACTICA2.md  PRACTICA4.md  PRACTICA5.md  PRACTICA6.md  PRACTICA8.md  Practica1.tex
Tercer Año/Primer Semestre/Ingeniería de Software II/: firstInterview.tex  firstQuestionary.tex
Tercer Año/Primer Semestre/Redes y Comunicaciones/: practica1.tex  practica2.tex
Tercer Año/Segundo Semestre/Programacion Concurrente/: Cuestionario2.md  Resumen.md
cuarto-año/Mineria de Datos utilizando Sistemas Inteligentes/repositories/: Clase 1 Ejemplo.properties  Clase 2 Ejemplo.properties  Clustering Text Mining.properties  Clustering Text Mining.rmp  Drugs (tree).properties  Ejemplo de decisiones.rmp  Ejemplo de performance con multiples cross validation.properties  Ejemplo de performance con multiples cross validation.rmp  Ejemplo trabajo final.properties  Ejemplo trabajo final_arbol.properties  Golf (tree).properties  Local Repository.properties  Mejor de comparacion de modelos.properties  Mejor de comparacionDeModelos.properties  Practica 1 ej 9 (bicis).properties  Practica 1.properties  Practica 1.rmp  Practica 2 ej 1.rmp  Practica 2 ej 2.rmp  Practica 3 ej 1.properties  Practica 3 ej 2.rmp  Practica 3 ej 3.rmp  Redes Neuronales (Neural Net con drogas).properties  Redes Neuronales (perceptron con drogas).rmp  Redes Neuronales (perceptron).properties  Reglas de asociacion Continuacion.properties  Reglas de asociacion.rmp  processes.properties
cuarto-año/logica-e-inteligencia-artificial/: README.md
cuarto-año/midusi/: README.md
cuarto-año/midusi/integrador/: hypo.csv
cuarto-año/midusi/repositories/: AlSol (tree).properties  AlSol (tree).rmp  Clase 1 Ejemplo.rmp  Clase 2 Ejemplo.rmp  Clustering.properties  Clustering.rmp  Drugs (tree).rmp  Ejemplo de decisiones.properties  Ejemplo de performance con arbol w-j48.properties  Ejemplo de performance con arbol w-j48.rmp  Ejemplo trabajo final.rmp  Ejemplo trabajo final_arbol.rmp  Golf (tree).rmp  Practica 1 ej 9 (bicis).rmp  Practica 2 ej 1.properties  Practica 2 ej 2.properties  Practica 3 ej 1.rmp  Practica 3 ej 2.properties  Practica 3 ej 3.properties  Redes Neuronales (Neural Net con drogas).rmp  Redes Neuronales (perceptron con drogas).properties  Redes Neuronales (perceptron).rmp  Reglas de asociacion Continuacion.rmp  Reglas de asociacion.properties  data.properties
cuarto-año/pdytr/: README.md
cuarto-año/programacion-funcional/: README.md
cuarto-año/redes-y-comunicaciones/: RepasoREDES VLSM.md
cuarto-año/sistemas-operativos/entregas/: ENTREGA.md  NOTAS.md.save  README.md
cuarto-año/sistemas-operativos/promo/: README.md  resumen.md
cuarto-año/sistemas-paralelos/: README.md
cuarto-año/tcyvp/practica1/: Practica 1 - TCyVP.odt
segundo-año/Introducción a Sistemas Operativos/: ENTRADA_SALIDA.md  INTRO.md  PROCESOS.md  README.md
segundo-año/ayed/: README.md
segundo-año/dbd/: README.md
segundo-año/iso/: INTRO.md  README.md
segundo-año/seminario-de-lenguajes/: README.md
tercer-año/Primer Semestre/CyPLP/: PRACTICA2.md  PRACTICA4.md
tercer-año/cyplp/: PRACTICA5.md  PRACTICA6.md
tercer-año/cyplp/src/: practica2.tex  (+1 more)
tercer-año/oo2/: README.md
(+247 files in other folders)
